--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,52 +1,55 @@
-[tool.poetry]
+[project]
 name = "surya-ocr"
-version = "0.7.0"
+version = "0.6.12"
 description = "OCR, layout, reading order, and table recognition in 90+ languages"
-authors = ["Vik Paruchuri <vik.paruchuri@gmail.com>"]
+authors = [{ name = "Vik Paruchuri", email = "vik.paruchuri@gmail.com" }]
 readme = "README.md"
-license = "GPL-3.0-or-later"
-repository = "https://github.com/VikParuchuri/surya"
+license = { text = "GPL-3.0-or-later" }
+repository = { url = "https://github.com/VikParuchuri/surya" }
 keywords = ["ocr", "pdf", "text detection", "text recognition", "tables"]
-packages = [
-    {include = "surya"}
+
+requires-python = ">=3.10"
+dependencies = [
+    "transformers>=4.41.0",
+    "pydantic>=2.5.3",
+    "pydantic-settings>=2.1.0",
+    "python-dotenv>=1.0.0",
+    "pypdfium2>=4.25.0",
+    "opencv-python>=4.9.0.80",
+    "tabulate>=0.9.0",
+    "ftfy>=6.1.3",
+    "pdftext>=0.3.18",
+    "loguru>=0.7.2",
+    "shapely>=2.0.6",
+    "pyclipper>=1.3.0.post6",
+    "rtree>=1.3.0",
+    "opencv-contrib-python>=4.10.0.84",
 ]
-include = [
-    "detect_text.py",
-    "ocr_text.py",
-    "ocr_app.py",
-    "run_ocr_app.py",
-    "detect_layout.py",
-    "reading_order.py",
-    "table_recognition.py"
+
+[tool.uv]
+dev-dependencies = [
+    "jupyter>=1.0.0",
+    "pymupdf>=1.23.8",
+    "snakeviz>=2.2.0",
+    "datasets>=2.16.1",
+    "rapidfuzz>=3.6.1",
+    "arabic-reshaper>=3.0.0",
+    "playwright>=1.41.2",
+    "flameprof>=0.4",
+    "scalene>=1.5.45",
+    "ipykernel>=6.29.5",
+    "ruff>=0.7.1",
+    "pip>=24.3.1",
+    "pytesseract>=0.3.13",
+    "click>=8.1.7",
+    "pyright>=1.1.387",
+    "py-spy>=0.4.0",
+    "torch>=2.5.1",
+    "torchvision>=0.20.1",
 ]
 
-[tool.poetry.dependencies]
-python = "^3.10"
-transformers = "^4.41.0"
-torch = "^2.4.1"
-pydantic = "^2.5.3"
-pydantic-settings = "^2.1.0"
-python-dotenv = "^1.0.0"
-pillow = "^10.2.0"
-pypdfium2 = "^4.25.0"
-opencv-python = "^4.9.0.80"
-tabulate = "^0.9.0"
-filetype = "^1.2.0"
-ftfy = "^6.1.3"
-pdftext = "^0.3.18"
 
-[tool.poetry.group.dev.dependencies]
-jupyter = "^1.0.0"
-pytesseract = "^0.3.10"
-pymupdf = "^1.23.8"
-snakeviz = "^2.2.0"
-datasets = "^2.16.1"
-rapidfuzz = "^3.6.1"
-arabic-reshaper = "^3.0.0"
-streamlit = "^1.31.0"
-playwright = "^1.41.2"
-
-[tool.poetry.scripts]
+[project.scripts]
 surya_detect = "detect_text:main"
 surya_ocr = "ocr_text:main"
 surya_layout = "detect_layout:main"
@@ -55,5 +58,49 @@ surya_order = "reading_order:main"
 surya_table = "table_recognition:main"
 
 [build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["surya"]
+
+[tool.hatch.build.targets.sdist]
+include = [
+    "detect_text.py",
+    "ocr_text.py",
+    "ocr_app.py",
+    "run_ocr_app.py",
+    "detect_layout.py",
+    "reading_order.py",
+    "table_recognition.py",
+]
+
+[tool.ruff.lint]
+extend-select = ["I001", "ANN001", "ANN201"]
+ignore = ["E501"]
+
+[tool.ruff.format]
+docstring-code-format = true
+docstring-code-line-length = 80
+
+[tool.pyright]
+venvPath = "."
+venv = ".venv"
+
+typeCheckingMode = "strict"
+
+reportMissingTypeStubs = "none"
+
+reportUnusedImport = "warning"
+reportUnusedVariable = "warning"
+
+reportPrivateUsage = "warning"
+reportPrivateImportUsage = "warning"
+
+reportUnknownParameterType = "none"
+reportUnknownArgumentType = "none"
+reportUnknownLambdaType = "none"
+reportUnknownVariableType = "none"
+reportUnknownMemberType = "none"
+
+reportUnnecessaryTypeIgnoreComment = "warning"
